2007-05-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/IReferenceImporter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/ImportContext.cs
	  Mono.Cecil/NullReferenceImporter.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ReflectionController.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/GenericContext.cs
	  Mono.Cecil/DefaultReferenceImporter.cs
	  Mono.Cecil/PropertyDefinition.cs:
		Provide a IReferenceImporter to customize how
		types are injected from an assembly to another.

2007-05-28  Jb Evain  <jbevain@novell.com>

	* Borrow annotations concept from boo ast node.
	  Should be useful for the linker.

2007-05-23  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Emit MemberReferences rows on demand.

2007-05-16  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil.Binary/ImageReader.cs:
		Fix reading of the debug header for
		headers half way emitted by .net SRE.

	* Mono.Cecil/BaseAssemblyResolver:
		try to resolve unversionned assemblies.

2007-05-09  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil.Binary/Image.cs:
		Throw when rva cannot be resolved.

	* Mono.Cecil.csproj
	  Mono.Cecil.Binary/ExportTable.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/ReflectionWriter.cs:
		When present, read the export table, so that people
		reading non managed assemblies can use the Mono.Cecil.Binary
		stuff.

		Fix the bug when section name is 8 char long.

		Based on a patch by Pavel Savara <pavel.savara@gmail.com>.

2007-04-27  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil/AssemblyNameReference.cs:
		Allow the computation of pktoken on CF_2_0.
